force-app/main/default/objects/Compliance_Action__mdt/Compliance_Action__mdt.object-meta.xml
<CustomObject>
    <label>Compliance Action</label>
    <pluralLabel>Compliance Actions</pluralLabel>
    <description>Defines actionable compliance recommendations surfaced by the Command Center. Each record represents a specific remediation or hardening action tied to a framework and severity.</description>
</CustomObject>