force-app/main/default/objects/Compliance_Action__mdt/fields/Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Description__c</fullName>
    <label>Action Description</label>
    <description>Detailed description of the compliance action and why it matters</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>