force-app/main/default/objects/Compliance_Action__mdt/fields/Action_Title__c.field-meta.xml
<CustomField>
    <fullName>Action_Title__c</fullName>
    <label>Action Title</label>
    <description>Short title displayed in the Command Center action card</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>