force-app/main/default/objects/Compliance_Action__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <description>Functional category for grouping actions (Access Control, Encryption, Monitoring, Data Protection, Audit, Incident Response)</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>