force-app/main/default/objects/Compliance_Action__mdt/fields/Control_Reference__c.field-meta.xml
<CustomField>
    <fullName>Control_Reference__c</fullName>
    <label>Control Reference</label>
    <description>Reference to the compliance control ID (e.g., SOC2-CC6.1, HIPAA-164.312(a)(1))</description>
    <type>Text</type>
    <length>100</length>
</CustomField>