force-app/main/default/objects/Compliance_Action__mdt/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <description>Compliance framework this action applies to (e.g., SOC2, HIPAA, GDPR)</description>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>