force-app/main/default/objects/Compliance_Action__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>Whether this action is currently active and should be displayed</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>