force-app/main/default/objects/Compliance_Action__mdt/fields/Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order__c</fullName>
    <label>Priority Order</label>
    <description>Display order within the Command Center (lower numbers appear first)</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>