force-app/main/default/objects/Compliance_Action__mdt/fields/Remediation_Steps__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Steps__c</fullName>
    <label>Remediation Steps</label>
    <description>Step-by-step instructions to remediate this finding</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>