force-app/main/default/objects/Compliance_Action__mdt/fields/Setup_Path__c.field-meta.xml
<CustomField>
    <fullName>Setup_Path__c</fullName>
    <label>Setup Path</label>
    <description>Salesforce Setup menu path for navigation (e.g., SecurityMfa/home, PermSets/home)</description>
    <type>Text</type>
    <length>255</length>
</CustomField>